bourbon + neat + bitters

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
     <%= render "layouts/head" %>
   </head>
   <body>
-
-    <%= yield %>
-
+    <%= render "layouts/flashes" %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
