Miscellaneous assets + styling, configuring localization

--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -27,6 +27,7 @@
       @include position(relative, -8px -8px null null);
       float: right;
       font-size: $base-line-height * 1em;
+      font-weight: bold;
       opacity: 0.2;
 
       &:after {
