--- a/app/assets/stylesheets/base/extends/_flashes.scss
+++ b/app/assets/stylesheets/base/extends/_flashes.scss
@@ -3,6 +3,7 @@
   color: darken($color, 60);
 
   a {
+    border-bottom: 1px solid transparentize(darken($color, 70), .7);
     color: darken($color, 70);
 
     &:hover {
