--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -2,8 +2,8 @@
   <% flash.each do |key, value| %>
     <% next unless value.is_a?(String) %>
     <div id="flash-<%= key %>" class="flash <%= key %>">
-      <label class="flash-close" for="flash-<%= key %>"></label>
-      <%= value %>
+      <span class="flash-close" role="button" aria-label="<%= t('.flash_close_label') %>"></span>
+      <span class="flash-text"><%= raw(value) %></span>
     </div>
   <% end %>
 </div>
