--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
-<% provide(:title, "Home") %>
-<h1>The Draconomicon</h1>
+<% provide(:title, t('.page_title')) %>
+
+<h1><%= t(:draconomicon) %></h1>
