--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,9 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
+<%= provide(:title, t(".page_title")) %>
+<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+  <!-- <%= devise_error_messages! %> -->
+  <h3><%= t(".heading") %></h3>
+  <p><%= t(".description") %></p>
+  <%= f.input :email, required: true %>
+  <%= f.submit t(".submit") %>
 <% end %>
-
 <%= render "devise/shared/links" %>
