--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
-<div id="flash-<%= key %>" class="flash <%= key %>">
+<div class="flash <%= key %>" id="flash-<%= key %>" role="alertdialog">
   <span class="flash-close" role="button" aria-label="<%= t('.close_label') %>"></span>
   <%= value %>
 </div>
