--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -1,4 +1,4 @@
-#notifactions.flashes
+.flashes#notifactions
   - flash.each do |key, value|
     - next unless value.is_a?(String)
     = render "layouts/flash", key: key, value: value
