Get Sign up working

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,5 +9,9 @@
         %li.nav-link
         - if user_signed_in?
           -# TODO
+          %li.nav-link.more
+            = link_to current_user.name, "javascript:void(0)"
+            %ul.submenu
+              %li= link_to "Sign out", destroy_user_session_path, method: :delete
         - else
           = nav_link_to t("paths.new_user_session"), new_user_session_path
