--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <!-- <%= devise_error_messages! %> -->
+  <%= devise_error_messages! %>
   <h2 class="form-heading"><%= t(".heading") %></h2>
   <%= f.input :name, required: true %>
   <%= f.input :email, required: true %>
   <%= f.input :password, required: true %>
   <%= f.input :password_confirmation, required: true %>
-  <%= f.submit t(".submit") %>
+  <%= f.submit %>
 <% end %>
 <%= render "devise/shared/links" %>
