--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <!-- <%= devise_error_messages! %> -->
+  <%= devise_error_messages! %>
   <h3><%= t(".heading") %></h3>
-  <p><%= t(".description") %><p>
-  <%= f.input :email, required: true %>
+  <p><%= t(".description") %></p>
+  <%= f.input :email, autofocus: true, required: true %>
   <%= f.submit t(".submit") %>
 <% end %>
 <%= render "devise/shared/links" %>
