--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <!-- <%= devise_error_messages! %> -->
+  <%= devise_error_messages! %>
   <h3><%= t(".heading") %></h3>
   <p><%= t(".description") %></p>
-  <%= f.input :email, required: true %>
+  <%= f.input :email, autofocus: true, required: true %>
   <%= f.submit t(".submit") %>
 <% end %>
 <%= render "devise/shared/links" %>
