--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,9 @@
 @import "base/base";
 @import "neat";
 
+@import "variables";
 @import "animations/*";
 
 @import "container";
 @import "flashes";
+@import "navbar";
