Use bower-rails

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -64,7 +64,9 @@
     }
 
     .nav-menu-right {
-      float: right;
+      @include media($horizontal-bar-mode) {
+        float: right;
+      }
     }
   }
 
