--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
 // the bottom of the compiled file so the styles you add here take precedence
 // over styles defined in any styles defined in the other CSS/SCSS files in this
 // directory. It is generally better to create a new file per style scope.
-@import "normalize-rails";
+@import "normalize.css/normalize";
 @import "bourbon";
 @import "base/base";
 @import "neat";
