--- a/app/views/kaminari/_first_page.html.haml
+++ b/app/views/kaminari/_first_page.html.haml
@@ -1,2 +1,1 @@
-%li.page-first
-  = link_to_unless current_page.first?, t("views.pagination.first").html_safe, url, remote: remote
+%li= link_to_unless current_page.first?, t("views.pagination.first").html_safe, url, remote: remote
