--- a/app/views/kaminari/_last_page.html.haml
+++ b/app/views/kaminari/_last_page.html.haml
@@ -1,2 +1,1 @@
-%li.page-last
-  = link_to_unless current_page.last?, t("views.pagination.last").html_safe, url, remote: remote
+%li= link_to_unless current_page.last?, t("views.pagination.last").html_safe, url, remote: remote
