--- a/app/views/kaminari/_next_page.html.haml
+++ b/app/views/kaminari/_next_page.html.haml
@@ -1,2 +1,1 @@
-%li.page-next
-  = link_to_unless current_page.last?, t("views.pagination.next").html_safe, url, rel: "next", remote: remote
+%li= link_to_unless current_page.last?, t("views.pagination.next").html_safe, url, rel: "next", remote: remote
