--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -4,7 +4,7 @@
 
   .flash {
     @extend %flash-base;
-    @include animation(fade-in 500ms);
+    @include animation(fadeInUp 500ms);
     border-radius: $base-border-radius;
     font-weight: normal;
     padding-right: 20px;
