Upgrade bitters, navbar re-write [WIP]

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -16,6 +16,14 @@ select {
 label {
   font-weight: bold;
   margin-bottom: $base-spacing / 4;
+
+  &.required:after {
+    content: "*";
+  }
+
+  abbr {
+    display: none;
+  }
 }
 
 textarea,
