--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     = render "layouts/head"
   %body
-    = render "layouts/navbar"
+    = render "layouts/navbar2"
     .container
       = yield
     = render "layouts/flashes"
