--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -1,13 +1,28 @@
+@mixin flash($color) {
+  background: $color;
+  color: darken($color, 60);
+
+  a {
+    border-bottom: 1px solid transparentize(darken($color, 70), .7);
+    color: darken($color, 70);
+
+    &:hover {
+      color: darken($color, 90);
+    }
+  }
+}
+
+
 .flashes {
   @include position(fixed, null 25px 25px null);
   z-index: 99999;
 
   .flash {
-    @extend %flash-base;
     @include animation(fadeInUp 500ms);
     border-radius: $base-border-radius;
-    font-weight: normal;
+    margin-bottom: $base-spacing / 2;
     padding-right: 20px;
+    padding: $base-spacing / 2;
 
     &.alert {
       @include flash($alert-color);
@@ -27,15 +42,11 @@
 
     .flash-close {
       @include position(relative, -8px -8px null null);
+      cursor: pointer;
       float: right;
       font-size: $base-line-height * 1em;
       font-weight: bold;
       opacity: .2;
-
-      &:after {
-        content: "\00d7";
-        cursor: pointer;
-      }
 
       &:hover {
         opacity: .5;
