--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -1,20 +1,13 @@
-/* Bitters 0.10.0
- * http://bitters.bourbon.io
- * Copyright 2013–2014 thoughtbot, inc.
- * MIT License */
+// Bitters 0.10.1
+// http://bitters.bourbon.io
+// Copyright 2013-2015 thoughtbot, inc.
+// MIT License
 
 // Variables
 @import "variables";
 
 // Neat Settings -- uncomment if using Neat -- must be imported before Neat
-// @import "grid-settings";
-
-// Extends
-@import "extends/button";
-@import "extends/clearfix";
-@import "extends/errors";
-@import "extends/flashes";
-@import "extends/hide-text";
+@import "grid-settings";
 
 // Typography and Elements
 @import "typography";
