--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -1,4 +1,6 @@
 .flashes#notifications
   - flash.each do |key, value|
     - next unless value.is_a?(String)
-    = render "layouts/flash", key: key, value: value
+    %div{ class: "flash #{key}", id: "flash-#{key}", role: "alertdialog" }
+      %span.flash-close{ role: "button", "aria-hidden": true } &times;
+      = value
