--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 // Libraries
 @import "normalize.css/normalize";
 @import "bourbon";
-@import "base/base";
+@import "bitters/base";
 @import "neat";
 @import "animate.css/animate";
 @import "font-awesome-sprockets";
