--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,5 +16,6 @@
 // App-specific CSS
 @import "container";
 @import "flashes";
-@import "navbar2";
+@import "navbar";
 @import "pagination";
+@import "users";
