--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -12,16 +12,14 @@
   }
 }
 
-
 .flashes {
   @include position(fixed, null 25px 25px null);
-  z-index: 99999;
+  z-index: 999;
 
   .flash {
-    @include animation(fadeInUp 500ms);
     border-radius: $base-border-radius;
     margin-bottom: $base-spacing / 2;
-    padding-right: 20px;
+    opacity: 0;
     padding: $base-spacing / 2;
 
     &.alert {
@@ -40,13 +38,24 @@
       @include flash($success-color);
     }
 
+    &.fade-in {
+      @include animation(fadeInUp 500ms);
+      opacity: 1;
+    }
+
+    &.fade-out {
+      @include animation(fadeOutDown 500ms);
+    }
+
+    // TODO FIXME
     .flash-close {
-      @include position(relative, -8px -8px null null);
+      @include position(relative, -8px -4px null null);
       cursor: pointer;
       float: right;
       font-size: $base-line-height * 1em;
       font-weight: bold;
       opacity: .2;
+      padding-right: 3px;
 
       &:hover {
         opacity: .5;
