--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,218 +1,49 @@
-// TODO
+// TODO dropdowns & mobile-friendly
 .nav {
   $nav-background: $dark-gray;
+  $nav-background-active: darken($nav-background, 10);
   $nav-color: transparentize(#fff, .3);
   $nav-color-hover: #fff;
-  $nav-height: 60px;
-  $nav-item-padding: 1em;
+  $nav-margin-bottom: 20px;
+  $nav-height: 50px;
   $nav-padding: 1em;
-  $nav-submenu-padding: 1em;
-  $nav-submenu-width: 12em;
-  $horizontal-bar-mode: $large-screen;
 
   background-color: $nav-background;
-  border-bottom: 1px solid darken($nav-background, 10);
+  border: 1px solid transparent;
+  margin-bottom: $nav-margin-bottom;
   min-height: $nav-height;
   z-index: 999;
 
-  .nav-container {
-    @include outer-container;
-    position: relative;
-  }
-
-  // Mobile View
-  .nav-menu-button {
-    color: $nav-color;
-    display: block;
-    float: right;
-    font-weight: 700;
-    line-height: $nav-height;
-    margin: 0;
-    padding-right: $nav-item-padding;
-    text-transform: uppercase;
-
-    @include media($horizontal-bar-mode) {
-      display: none;
-    }
-
-    &:focus,
-    &:hover {
-      color: $nav-color-hover;
-    }
-  }
-
-  // Navigation Menu
-  .nav-menu {
-    clear: both;
-    display: none;
-    float: none;
-    margin: 0 auto;
-    min-height: $nav-height;
-    overflow: visible;
-    padding: 0;
-    width: 100%;
-
-    @include media($horizontal-bar-mode) {
-      display: inline;
-      float: left;
-      margin: 0;
-      padding: 0;
-    }
-
-    &.show {
-      display: block;
-    }
-
-    .nav-menu-right {
-      @include media($horizontal-bar-mode) {
-        float: right;
-      }
-    }
-  }
-
-  // Navigation Menu Items
-  .nav-link {
-    background: $nav-background;
-    display: block;
-    line-height: $nav-height;
-    overflow: hidden;
-    padding-right: .8em;
-    text-align: right;
-    width: 100%;
-
-    @include media($horizontal-bar-mode) {
-      background: transparent;
-      display: inline;
-      line-height: $nav-height;
-      text-decoration: none;
-      width: auto;
-    }
-
-    a {
-      color: $nav-color;
-      display: inline-block;
-      font-weight: 400;
-
-      @include media($horizontal-bar-mode) {
-        padding: 0 $nav-item-padding / 2;
-      }
-
-      &:focus,
-      &:hover {
-        color: $nav-color-hover;
-      }
-    }
-
-    &.more {
-      padding-right: 0;
-
-      @include media($horizontal-bar-mode) {
-        padding-right: $nav-submenu-padding;
-      }
-
-      > .submenu > li:first-child {
-        padding-top: $nav-submenu-padding;
-      }
-
-      a {
-        margin-right: $nav-submenu-padding;
-      }
-
-      > a {
-        padding-right: .6em;
-
-        &:after {
-          @include position(absolute, auto -.4em auto auto);
-          color: $nav-color;
-          content: "\25BE";
-        }
-      }
-    }
-  }
-
-  .more {
-    overflow: visible;
-    padding-right: 0;
-
-    @include media($horizontal-bar-mode) {
-      padding-right: .8em;
-      position: relative;
-    }
-
-    a {
-      padding-right: .8em;
-    }
-
-    > a {
-      padding-right: 1.6em;
-      position: relative;
-
-      @include media($horizontal-bar-mode) {
-        margin-right: $nav-submenu-padding;
-      }
-
-      &:after {
-        content: "›";
-        font-size: 1.2em;
-        position: absolute;
-        right: $nav-submenu-padding / 2;
-      }
-    }
-
-    &:focus > .submenu,
-    &:hover > .submenu {
-      display: block;
-    }
-  }
-
-  .submenu {
-    display: none;
+  .navbar {
+    @include clearfix;
+    display: inline-block;
+    float: left;
+    list-style: none;
+    margin-bottom: 0;
     padding-left: 0;
 
-    @include media($horizontal-bar-mode) {
-      left: -$nav-submenu-padding;
-      position: absolute;
-      top: 1.4em;
+    &.navbar-right {
+      float: right;
     }
 
-    .submenu {
-      @include media($horizontal-bar-mode) {
-        left: $nav-submenu-width - .2em;
-        top: 0;
-      }
-    }
+    > li {
+      display: inline-block;
+      position: relative;
 
-    li {
-      display: block;
-      padding-right: 0;
-
-      @include media($horizontal-bar-mode) {
-        line-height: $nav-height / 1.3;
-
-        &:first-child > a {
-          border-top-left-radius: $base-border-radius;
-          border-top-right-radius: $base-border-radius;
-        }
-
-        &:last-child > a {
-          border-bottom-left-radius: $base-border-radius;
-          border-bottom-right-radius: $base-border-radius;
-          padding-bottom: .7em;
-        }
-      }
-
-      a {
-        background-color: darken($nav-background, 3%);
+      > a {
+        color: $nav-color;
         display: inline-block;
-        text-align: right;
-        width: 100%;
+        padding: $nav-padding;
+        position: relative;
 
-        @include media($horizontal-bar-mode) {
-          background-color: $nav-background;
-          padding-left: $nav-submenu-padding;
-          text-align: left;
-          width: $nav-submenu-width;
+        &:focus,
+        &:hover {
+          color: $nav-color-hover;
         }
+      }
+
+      &.active > a {
+        background: $nav-background-active;
       }
     }
   }
