--- a/app/views/kaminari/_first_page.html.haml
+++ b/app/views/kaminari/_first_page.html.haml
@@ -1,1 +1,3 @@
-%li= link_to_unless current_page.first?, t("views.pagination.first").html_safe, url, remote: remote
+%li<
+  = link_to_unless current_page.first?, t("views.pagination.first").html_safe, url, remote: remote do
+    %span.disabled= t("views.pagination.first").html_safe
