--- a/app/views/kaminari/_next_page.html.haml
+++ b/app/views/kaminari/_next_page.html.haml
@@ -1,1 +1,3 @@
-%li= link_to_unless current_page.last?, t("views.pagination.next").html_safe, url, rel: "next", remote: remote
+%li<
+  = link_to_unless current_page.last?, t("views.pagination.next").html_safe, url, rel: "next", remote: remote do
+    %span.disabled= t("views.pagination.next").html_safe
