--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,22 +1,16 @@
+-# TODO dropdowns
 %header.nav{ role: "banner" }
-  .nav-container
-    = link_to t(".mobile_menu"), "javascript:void(0)", class: "nav-menu-button", id: "js-mobile-menu"
+  .container
     %nav{ role: "navigation" }
-      %ul.nav-menu.show#js-nav-menu
-        = nav_link_to t("paths.root"), root_path
-        = nav_link_to t("paths.about"), "/about"
+      %ul.navbar
+        = nav_link_to t("paths.home"), home_path
+        = nav_link_to t("paths.about"), about_path
         = nav_link_to t("paths.contact"), "/contact"
-        %ul.nav-menu-right
-          = nav_link_to t("paths.users"), users_path
-          - if user_signed_in?
-            %li.nav-link.more
-              = link_to "javascript:void(0)" do
-                = icon "star" if current_user.admin?
-                = current_user.name
-              %ul.submenu
-                %li= link_to t("paths.user"), current_user
-                %li= link_to t("paths.edit_user_registration"), edit_user_registration_path
-                %li= link_to t("paths.destroy_user_session"), destroy_user_session_path, method: :delete
-          - else
-            = nav_link_to t("paths.new_user_session"), new_user_session_path
-            = nav_link_to t("paths.new_user_registration"), new_user_registration_path, class: "sign-up"
+      %ul.navbar.navbar-right
+        = nav_link_to t("paths.users"), users_path
+        -# TODO dropdown for sign in
+        - if user_signed_in?
+          = nav_link_to t("paths.user"), current_user
+          = nav_link_to t("paths.destroy_user_session"), destroy_user_session_path, method: :delete
+        - else
+          = nav_link_to t("paths.new_user_session"), new_user_session_path
