Work on user and character show view, #to_s method

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -13,4 +13,10 @@
 // ============
 // User Profile
 // ============
-// TODO
+.user-info {
+  @include span-columns(4);
+}
+
+.user-profile {
+  @include span-columns(8);
+}
