--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,10 @@
 @import "animate.css/animate";
 
 // App-specific CSS
+@import "variables";
+
 @import "container";
+@import "devise";
 @import "flashes";
 @import "navbar";
 @import "pagination";
