--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -18,9 +18,11 @@
 
   .flash {
     border-radius: $base-border-radius;
-    margin-bottom: $base-spacing / 2;
+    display: block;
+    margin-bottom: $small-spacing;
     opacity: 0;
-    padding: $base-spacing / 2;
+    padding: $small-spacing;
+    text-align: center;
 
     &.alert {
       @include flash($alert-color);
@@ -47,7 +49,6 @@
       @include animation(fadeOutDown 500ms);
     }
 
-    // TODO FIXME
     .flash-close {
       @include position(relative, -8px -4px null null);
       cursor: pointer;
