--- a/app/assets/stylesheets/bitters/_buttons.scss
+++ b/app/assets/stylesheets/bitters/_buttons.scss
@@ -1,15 +1,16 @@
-#{$all-button-inputs} {
-  -webkit-font-smoothing: antialiased;
+#{$all-button-inputs},
+button {
   @include appearance(none);
-  background-color: $base-button-color;
+  -webkit-font-smoothing: antialiased;
+  background-color: $action-color;
   border-radius: $base-border-radius;
   border: none;
-  color: white;
+  color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: $base-font-family;
   font-size: $base-font-size;
-  font-weight: bold;
+  font-weight: 600;
   line-height: 1;
   padding: 0.75em 1em;
   text-decoration: none;
@@ -19,8 +20,8 @@
 
   &:hover,
   &:focus {
-    background-color: $hover-button-color;
-    color: white;
+    background-color: darken($action-color, 15%);
+    color: #fff;
   }
 
   &:disabled {
