--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import "container";
 @import "devise";
 @import "flashes";
+@import "forms";
 @import "navbar";
 @import "pagination";
 @import "users";
