--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,6 @@
 %h1= t(".heading")
 %p= link_to t("paths.new_user_session"), new_user_session_path
 %p= link_to t("paths.new_user_registration"), new_user_registration_path, class: "sign-up"
+
+= link_to "javascript:void(0)", class: "tooltipped tooltipped-s", "aria-label" => "Testing!" do
+  = icon "star"
