Implement flashes in React

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,4 @@
     = render "layouts/navbar"
     .container
       = yield
-    = render "layouts/flashes"
+    = react_component "Flashes", flashes: flash
