Implement react transitions for flashes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,6 @@
 @import "forms";
 @import "navbar";
 @import "pagination";
-@import "users";
-
 @import "tooltips";
+@import "transitions";
+@import "users";
