Use ES6 + lodash

--- a/app/assets/stylesheets/_flashes.scss
+++ b/app/assets/stylesheets/_flashes.scss
@@ -17,6 +17,7 @@
   z-index: 999;
 
   .flash {
+    @include flash(#eee);
     border-radius: $base-border-radius;
     display: block;
     margin-bottom: $small-spacing;
