--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,5 +7,5 @@
 
 :javascript
   $('#test').on('click', function() {
-    DraconomiconFlashes.add('success', 'Hello world!');
+    Draconomicon.Flashes.add('success', 'Hello world!');
   });
