--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,5 +1,6 @@
 %nav.navbar{ role: "navigation" }
   .navbar-container
+    -# TODO localize aria-label
     = link_to "javascript:void(0)", class: "navbar-menu-button", "aria-label": "Toggle Menu" do
       = icon "bars"
     %ul.navbar-toggle.show
