--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,3 +1,4 @@
+<% # TODO localize %>
 <p>Hello <%= @resource.name %>!</p>
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
