--- a/app/views/devise/mailer/reset_password_instructions.text.erb
+++ b/app/views/devise/mailer/reset_password_instructions.text.erb
@@ -1,3 +1,4 @@
+<% # TODO localize %>
 Hello <%= @resource.name %>!
 
 Someone has requested a link to change your password. You can do this through the link below.
