--- a/app/assets/stylesheets/_transitions.scss
+++ b/app/assets/stylesheets/_transitions.scss
@@ -3,10 +3,20 @@
 // fade
 .fade {
   &-appear, &-enter {
-    @include animation(fadeIn .5s);
+    @include transition(opacity .4s ease-in-out);
+    opacity: 0;
+
+    &-active {
+      opacity: 1;
+    }
   }
 
   &-leave {
-    @include animation(fadeOut .5s);
+    @include transition(opacity .4s ease-in-out);
+    opacity: 1;
+
+    &-active {
+      opacity: 0;
+    }
   }
 }
