Update binstubs; Fix style

--- a/app/views/devise/mailer/confirmation_instructions.text.erb
+++ b/app/views/devise/mailer/confirmation_instructions.text.erb
@@ -1,4 +1,4 @@
-<% # TODO localize %>
+<% # TODO: localize %>
 Welcome <%= @resource.name %>!
 
 You can confirm your account email through the link below:
