--- a/app/views/devise/mailer/unlock_instructions.text.erb
+++ b/app/views/devise/mailer/unlock_instructions.text.erb
@@ -1,4 +1,4 @@
-<% # TODO localize %>
+<% # TODO: localize %>
 Hello <%= @resource.name %>!
 
 Your account has been locked due to an excessive number of unsuccessful sign in attempts.
